--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  background-image: linear-gradient(to right, rgb(89, 86, 152), rgb(10, 5, 95));
+  background-image: linear-gradient(to right, rgb(60, 182, 210), rgb(0, 159, 98));
   font-family: 'Open Sans', sans-serif;
+  margin: auto;
 }
 
 .container {
@@ -12,7 +13,6 @@ body {
   padding-bottom: 25px;
   width: 420px;
   background-color: rgb(0, 0, 0, 0.07);
-  /* opacity: 80%; */
   color: white;
   text-align: center;
   border-radius: 50px;
